@@ -25,12 +25,12 @@ service_browser_cb (AvahiServiceBrowser     *browser G_GNUC_UNUSED,
     {
       if (g_str_equal (name, first_name))
         {
-          epc_test_pass_once (2);
+          epc_test_pass_once (1 << 1);
           epc_publisher_set_service_name (publisher, second_name);
         }
 
       if (g_str_equal (name, second_name))
-        epc_test_pass_once (4);
+        epc_test_pass_once (1 << 2);
     }
 }
 
@@ -56,11 +56,11 @@ main (int   argc G_GNUC_UNUSED,
   publisher = epc_publisher_new (first_name, NULL, NULL);
   epc_publisher_set_protocol (publisher, EPC_PROTOCOL_HTTP);
 
-  if (epc_test_init (7) &&
+  if (epc_test_init (3) &&
       epc_test_init_service_browser (EPC_SERVICE_TYPE_HTTP, service_browser_cb, publisher) &&
       epc_publisher_run_async (publisher, &error))
     {
-      epc_test_pass_once (1);
+      epc_test_pass_once (1 << 0);
       result = epc_test_run ();
     }
 
